--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ img {
 }
 
 .indifferent {
-  background-color: #dddd22;
   box-shadow:  -1px 1px #bbbb00, -2px 2px #bbbb00, -3px 3px #bbbb00, -4px 4px #bbbb00, -5px 5px #bbbb00;
+  background: linear-gradient(to right, #dddd22, #999900);
 }
 
 .dubious {
